--- a/package.xml
+++ b/package.xml
@@ -43,7 +43,7 @@
   <build_depend>nav_msgs</build_depend>
   <build_depend>sensor_msgs</build_depend>
   <build_depend>std_msgs</build_depend>
-  <build_depend>commont_msgs</build_depend>
+  <build_depend>common_msgs</build_depend>
   <build_depend>geometry_msgs</build_depend>
   <build_depend>hardware_interface</build_depend>
   <build_depend>controller_interface</build_depend>
