--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -113,7 +113,7 @@ find_package(catkin REQUIRED COMPONENTS
 catkin_package(
   INCLUDE_DIRS include
   LIBRARIES cepheus_robot
-  CATKIN_DEPENDS common_msgs ros_control roscpp std_msgs rospy
+  CATKIN_DEPENDS ros_control roscpp std_msgs rospy
   DEPENDS system_lib
 )
 
@@ -139,7 +139,7 @@ add_executable(camera_odom_node src/camera_odom.cpp)
 add_executable(mouse_odom_node src/mouse_odom_2.cpp)
 add_executable(phase_space_inverted_node src/phase_space_axes_swap.cpp)
 add_executable(thrusters_node src/thruster_controller.cpp)
-add_executable(cepheus_interface_node src/cepheus_interface.cpp src/cepheus_hardware.cpp src/cepheus_interface.h)
+add_executable(cepheus_interface_node src/cepheus_interface.cpp src/cepheus_hardware.cpp src/cepheus_hardware.h)
 
 ## Add cmake target dependencies of the executable
 ## same as for the library above
@@ -150,6 +150,7 @@ target_link_libraries(camera_odom_node  ${catkin_LIBRARIES})
 target_link_libraries(mouse_odom_node  ${catkin_LIBRARIES})
 target_link_libraries(phase_space_inverted_node  ${catkin_LIBRARIES})
 target_link_libraries(thrusters_node  ${catkin_LIBRARIES} librtd_dm7820)
+target_link_libraries(cepheus_interface_node  ${catkin_LIBRARIES} librtd_dm7820)
 
 #############
 ## Install ##
