--- a/package.xml
+++ b/package.xml
@@ -42,6 +42,7 @@
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>sensor_msgs</build_depend>
   <build_depend>std_msgs</build_depend>
+  <build_depend>std_srvs</build_depend>
   <build_depend>geometry_msgs</build_depend>
   <build_depend>nav_msgs</build_depend>
   <build_depend>hardware_interface</build_depend>
@@ -51,6 +52,7 @@
   <build_depend>rospy</build_depend>
   <build_depend>urdf</build_depend>
   <build_depend>tf</build_depend>
+  <build_depend>angles</build_depend>
   
   <run_depend>sensor_msgs</run_depend>
   <run_depend>std_msgs</run_depend>
